--- a/src/visao/ClassificacaoVisitante.form
+++ b/src/visao/ClassificacaoVisitante.form
@@ -110,29 +110,23 @@
               <Font name="Arial" size="14" style="0"/>
             </Property>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="13" rowCount="21">
-                <Column editable="false" title="Title 1" type="java.lang.Object"/>
-                <Column editable="false" title="Title 2" type="java.lang.Object"/>
-                <Column editable="false" title="Title 3" type="java.lang.Object"/>
-                <Column editable="false" title="Title 4" type="java.lang.Object"/>
-                <Column editable="false" title="null" type="java.lang.Object"/>
-                <Column editable="false" title="null" type="java.lang.Object"/>
-                <Column editable="false" title="null" type="java.lang.Object"/>
-                <Column editable="false" title="null" type="java.lang.Object"/>
-                <Column editable="false" title="null" type="java.lang.Object"/>
-                <Column editable="false" title="null" type="java.lang.Object"/>
-                <Column editable="false" title="null" type="java.lang.Object"/>
-                <Column editable="false" title="null" type="java.lang.Object"/>
-                <Column editable="false" title="null" type="java.lang.Object"/>
+              <Table columnCount="12" rowCount="21">
+                <Column editable="false" title="Posi&#xe7;&#xe3;o" type="java.lang.Object"/>
+                <Column editable="false" title="Indicador" type="java.lang.Object"/>
+                <Column editable="false" title="Equipe" type="java.lang.Object"/>
+                <Column editable="false" title="PG" type="java.lang.Object"/>
+                <Column editable="false" title="Jogos" type="java.lang.Object"/>
+                <Column editable="false" title="Vitoras" type="java.lang.Object"/>
+                <Column editable="false" title="Empates" type="java.lang.Object"/>
+                <Column editable="false" title="Derrotas" type="java.lang.Object"/>
+                <Column editable="false" title="Gol Pro" type="java.lang.Object"/>
+                <Column editable="false" title="Gol Contra" type="java.lang.Object"/>
+                <Column editable="false" title="Saldo" type="java.lang.Object"/>
+                <Column editable="false" title="%" type="java.lang.Object"/>
               </Table>
             </Property>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
               <TableColumnModel selectionModel="0">
-                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
-                  <Title/>
-                  <Editor/>
-                  <Renderer/>
-                </Column>
                 <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                   <Title/>
                   <Editor/>
